--- a/calculator/MainWindow.xaml
+++ b/calculator/MainWindow.xaml
@@ -1,19 +1,18 @@
-﻿
-<Window x:Class="calculator.MainWindow"
+﻿<Window x:Class="calculator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:calculator"
         mc:Ignorable="d"
-        Title="calculator" Height="600" Width="800"
+        Title="HeavyCalc" Height="600" Width="800"
         Background="{DynamicResource MainWindowBackgroudColor}"
         ResizeMode="CanMinimize"
         FontWeight="Bold"
 >
 
     <Grid>
-        
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="{StaticResource ColumnSize}"/>
             <ColumnDefinition Width="{StaticResource ColumnSize}"/>
@@ -49,7 +48,7 @@
             Content="."
             Click="FloatPoint_Button_OnClick" 
         />
-        
+
         <Button 
             FontFamily="{StaticResource NumbersButtonsFontFamily}"
             FontSize="{StaticResource NumbersButtonsFontSize}" 
@@ -206,7 +205,7 @@
             Content="PI"
             Click="Pi_Button_OnClick" 
         />
-        
+
         <Button 
             FontFamily="{StaticResource NumbersButtonsFontFamily}"
             FontSize="{StaticResource NumbersButtonsFontSize}" 
@@ -265,7 +264,7 @@
             Content='*'
             Click="OperatorMultiplay_Button_OnClick" 
         />
-        
+
         <Button 
             FontFamily="{StaticResource NumbersButtonsFontFamily}"
             FontSize="{StaticResource NumbersButtonsFontSize}" 
@@ -295,12 +294,11 @@
             FontFamily="{StaticResource NumbersButtonsFontFamily}"
             FontSize="{StaticResource NumbersButtonsFontSize}" 
             FontWeight="Bold"
-            Background="{StaticResource OperatorsButtonsColor}"
-            Width="{StaticResource EdgeButtonsWidth}" 
+            Background="{StaticResource OperatorsButtonsColor}" 
             Height="40"
             Grid.Column="7" Grid.Row="10"
             Content='^'
-            Click="OperatorPower_Button_OnClick" 
+            Click="OperatorPower_Button_OnClick" Margin="10,16,10,15" 
         />
 
         <Button 
@@ -344,7 +342,7 @@
             Margin="10,0,10,0"
         />
 
-        
+
         <Button 
             FontFamily="{StaticResource NumbersButtonsFontFamily}"
             FontSize="{StaticResource NumbersButtonsFontSize}" 
@@ -361,59 +359,46 @@
             FontFamily="{StaticResource NumbersButtonsFontFamily}"
             FontSize="{StaticResource NumbersButtonsFontSize}" 
             FontWeight="Bold"
-            Background="LightGreen"
-            Width="{StaticResource NumbersButtonsWidth}" 
+            Background="LightGreen" 
             Height="auto"
-            Margin="10"
+            Margin="10,5"
             Grid.Column="7" Grid.Row="7"
             Grid.RowSpan="3"
             Content="= "
             Click="Equal_Button_OnClick" 
         />
 
-        <Label
-            BorderThickness="2"
+
+        <ListView
+            Name="HistoryList" 
+            BorderThickness="1"
             BorderBrush="white"
-            Width="auto"
-            Height="auto"
-            Background="Transparent"
+            Width="794"
+            Height="245"
+            Background="#242424"
             Grid.Column="0" 
             Grid.Row="0"
-            Grid.RowSpan="6"
+            Grid.RowSpan="5"
             Grid.ColumnSpan="8"
-            Margin="10"
+            Margin="0,0,0,0"
+            HorizontalAlignment="Left" 
+            VerticalAlignment="Top"
         >
 
-            <Label
-                Width="auto"
-                Height="200"
-                Background="Gray"
-                Grid.Column="0" 
-                Grid.Row="0"
-                Grid.RowSpan="6"
-                
-            >
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="750"/>
-                    </Grid.ColumnDefinitions>
-                    
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
 
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                </Grid>
-                
-            </Label>
+        </ListView>
 
-          
-        </Label>
-
-        
+        <TextBox
+            Margin="0,10,10,0"
+            Text=""
+            FontSize="20"
+            FontWeight="Bold"
+            Foreground="Black"
+            Background="white"
+            Grid.Column="1"
+            Grid.Row="5"
+            Grid.ColumnSpan="7"
+        />
 
         <TextBlock 
             Grid.Row="6"
@@ -423,7 +408,16 @@
             FontWeight="Bold"
             Foreground="white"
         />
-
+        <TextBlock 
+            Grid.Row="5"
+            Margin="0,10,0,0"
+            Text="math"
+            FontSize="20"
+            FontWeight="Bold"
+            Foreground="white"
+            TextAlignment="Center"
+        />
+        
         <TextBlock 
             Grid.Column="4" 
             Grid.Row="6"
@@ -434,17 +428,17 @@
             FontSize="20"
                 
         />
-            
+
 
         <TextBox
             Grid.Column="1"
             Grid.ColumnSpan="3"
             Grid.Row="6"  
-            Margin="0,6,0,6"
+            Margin="0,6,10,6"
             FontSize="20"
             
         >
-            
+
         </TextBox>
 
 
@@ -460,5 +454,5 @@
 
     </Grid>
 
-    
+
 </Window>
